--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,7 +3,20 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:spinnerItemStyle">@style/SpinnerItem</item>
+        <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItem</item>
         <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="SpinnerItem" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:fontFamily">@font/share_tech_mono_regular</item>
+        <item name="android:textSize">18dp</item>
+    </style>
+
+    <style name="SpinnerDropDownItem" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:fontFamily">@font/share_tech_mono_regular</item>
     </style>
 
 </resources>
